--- a/biaobai.html
+++ b/biaobai.html
@@ -102,7 +102,7 @@
     <img src="https://wx4.sinaimg.cn/mw690/6101eab4gy1g0afutks7ij20ty0tztas.jpg" id="logo">
 
 </div>
-<canvas class="canvas" width="1820" height="905"></canvas>
+<canvas class="canvas" width=device-width height=device-width></canvas>
 <p class="text" style="color: #ed3073;">
      我们相识
     <br/>
@@ -669,7 +669,7 @@
     S.init();
 </script>
 <audio autoplay="autoplay" loop="loop">
-    <source src="http://www.170mv.com/kw/other.web.re01.sycdn.kuwo.cn/resource/n1/67/16/2729592931.mp3" type="audio/mpeg">
+    <source src="https://9.cdn.music-cdn.com/proxy/cs1-59v4.vkuseraudio.net/p13/953cdfaea42e22.mp3" type="audio/mpeg">
 </audio>
 </body>
 </html>
