changed music to photograph

--- a/biaobai.html
+++ b/biaobai.html
@@ -669,7 +669,7 @@
     S.init();
 </script>
 <audio autoplay="autoplay" loop="loop">
-    <source src="https://9.cdn.music-cdn.com/proxy/cs1-59v4.vkuseraudio.net/p13/953cdfaea42e22.mp3" type="audio/mpeg">
+    <source src="http://www.170mv.com/kw/other.web.re01.sycdn.kuwo.cn/resource/n1/67/16/2729592931.mp3" type="audio/mpeg">
 </audio>
 </body>
 </html>
